--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,5 +1,6 @@
 $apply-bg-color: #5C7C08
 $apply-content-color: #E7E7E7
+$menu-item-color: #A9A7A5
 
 header
   background-color: $header-color
@@ -18,7 +19,8 @@ header
     display: inline-block
 
     a
-      color: $copy-alt-color
+      color: $menu-item-color
+      font-weight: 600
       padding-right: 40px
       text-transform: uppercase
 
