--- a/sass/pages/countdown/_tags.sass
+++ b/sass/pages/countdown/_tags.sass
@@ -10,7 +10,9 @@ section.tags
     i
       background-color: $tags-icon-background-color
       color: white
-      padding: 5px 15px
+      padding: 5px 0
+      text-align: center
+      width: 40px
 
     span
       padding-left: 15px
