--- a/sass/libraries-fonts/index.sass
+++ b/sass/libraries-fonts/index.sass
@@ -2,3 +2,4 @@
 @import 'font-awesome/css/font-awesome'
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600')
+@import url('assets/fonts/texas-led.ttf')
