--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600");
+@import url("assets/fonts/texas-led.ttf");
 @font-face {
   font-family: 'FontAwesome';
   src: url("../fonts/fontawesome-webfont.eot?v=4.7.0");
@@ -2384,7 +2385,32 @@ section.reviews p {
   margin: 0; }
 
 section.countdown {
-  background-color: rgba(0, 0, 0, 0.2); }
+  background-color: rgba(0, 0, 0, 0.2);
+  padding-bottom: 0; }
+  section.countdown .container {
+    flex-direction: row;
+    justify-content: center; }
+  section.countdown article {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-right: 50px; }
+    section.countdown article h5 {
+      color: #66737D;
+      margin: 0; }
+    section.countdown article p {
+      display: flex;
+      flex-direction: row; }
+      section.countdown article p span {
+        background-color: black;
+        color: #7ED321;
+        display: inline-block;
+        font-family: "Texas LED";
+        font-size: 48px;
+        padding: 15px 15px 5px 10px;
+        margin: 0 5px;
+        text-align: center;
+        width: 60px; }
 
 section.sponsors h3 {
   color: white;
