--- a/sass/pages/countdown/index.sass
+++ b/sass/pages/countdown/index.sass
@@ -16,3 +16,7 @@ aside
   section
     background-color: rgba(0,0,0,0.4)
     margin: 20px
+
+@media all and (max-width: 700px)
+  .content
+    flex-direction: column
