--- a/sass/_reusable.sass
+++ b/sass/_reusable.sass
@@ -2,7 +2,8 @@
   display: flex
   flex-direction: column
   margin: 0 auto
-  width: 940px
+  max-width: 960px
+  padding: 0 10px
 
 .content
   display: flex
