--- a/sass/libraries-fonts/index.sass
+++ b/sass/libraries-fonts/index.sass
@@ -1,5 +1,5 @@
 @import 'bourbon/bourbon'
 @import 'font-awesome/css/font-awesome'
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600')
+// @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600')
 @import url('assets/fonts/texas-led.ttf')
