--- a/sass/pages/countdown/_countdown.sass
+++ b/sass/pages/countdown/_countdown.sass
@@ -15,20 +15,37 @@ section.countdown
     flex-direction: column
     padding-right: 50px
 
-    h5
-      color: $countdown-text-color
-      margin: 0
+  h5
+    color: $countdown-text-color
+    margin: 0
+
+  p
+    display: flex
+    flex-direction: row
+
+  span
+    background-color: black
+    color: $countdown-numbers-color
+    display: inline-block
+    font-family: "Texas LED"
+    font-size: 48px
+    padding: 15px 15px 5px 10px
+    margin: 0 5px
+    text-align: center
+    width: 60px
+
+
+@media all and (max-width: $breakpoint)
+  section.countdown
+
+    article
+      padding-right: 10px
+
+    span
+      font-size: 24px
+      padding: 10px 5px 3px 2px
+      width: 25px
+      margin: 0 2px
 
     p
-      display: flex
-      flex-direction: row
-      span
-        background-color: black
-        color: $countdown-numbers-color
-        display: inline-block
-        font-family: "Texas LED"
-        font-size: 48px
-        padding: 15px 15px 5px 10px
-        margin: 0 5px
-        text-align: center
-        width: 60px
+      margin: 5px 0
