--- a/sass/pages/countdown/_hero.sass
+++ b/sass/pages/countdown/_hero.sass
@@ -5,20 +5,27 @@ $reviews-rating-color: #3B9EF0
 .hero
   background-color: rgba(0,0,0, 0.2)
 
+  img
+    max-width: 100%
+
   h1
     margin-top: 5px
+
+  p
+    margin: 5px 0
 
   .breadcrumbs
     color: $breadcrumbs-color
     margin: 0
+    font-size: 12px
 
   .content
     justify-content: space-between
 
-    & > img
+    .left
       width: 59%
 
-    & > div
+    .right
       width: 39%
 
   .info
@@ -29,3 +36,22 @@ $reviews-rating-color: #3B9EF0
 
   .user-reviews p
     color: $reviews-rating-color
+
+@media all and (max-width: $breakpoint)
+  .hero
+
+    h1
+      font-size: 24px
+      text-align: center
+
+    .content
+      flex-direction: column
+
+
+      .left, .right
+        display: flex
+        flex-direction: column
+        width: auto
+
+      p
+        text-align: center
